--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,8 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: Pramodprabhu28/checkout@v3
+
 
     - name: Trigger Dev Job in Databricks
       env:
